connect services and exception
